<resources>
    <string name="app_name">UI</string>
    <string name="font_10">小号字体</string>
    <string name="font_size">字体大小</string>
    <string name="font_16">中号字体</string>
    <string name="font_20">大号字体</string>
    <string name="normal_choice">普通菜单项</string>
    <string name="font_color">字体颜色</string>
    <string name="red">红色</string>
    <string name="black">黑色</string>
    <string name="test_words">用于测试的内容</string>
</resources>
